Archive2/18/c0799a9e4c468b/output
main.cpp: In function 'int main()':
main.cpp:10:22: error: expected ',' before '&' token
     auto fn = [myName&]{
                      ^
main.cpp:10:23: error: expected identifier before ']' token
     auto fn = [myName&]{
                       ^
main.cpp:7:9: warning: unused variable 'myFavNum' [-Wunused-variable]
     int myFavNum = 7;
         ^
